fix align

--- a/src/app/pages/calculo/tipo-lampada/tipo-lampada.component.scss
+++ b/src/app/pages/calculo/tipo-lampada/tipo-lampada.component.scss
@@ -40,6 +40,7 @@
     padding: 35px;
     line-height: 75px;
     font-family: OpenSans-Regular;
+    color : #2e60b3;
     @media only screen and (min-width: 990px) {
       font-size: 20px;
       padding: 0px;
