--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -90,6 +90,7 @@ body {
       font-size: 3rem;
       padding: 35px;
       font-family: OpenSans-Regular;
+    color : #2e60b3;
       @media only screen and (min-width: 990px) {
         font-size: 20px;
       padding: 0px;
