--- a/src/app/shared/botao-selecao/botao-selecao.component.scss
+++ b/src/app/shared/botao-selecao/botao-selecao.component.scss
@@ -62,22 +62,15 @@
     font-family: 'OpenSans-SemiBold';
     font-size: 3rem;
     color: #2156AE;
+    margin-top: -25px;
 
     @media only screen and (min-width:990px) {
 
 
       font-size: 1rem;
-      margin-top: 1%;
-
+      margin-top: 11px;
 
           }
-          @media only screen and (min-height:800px) {
-
-
-            margin-top: 13px;
-
-
-                }
 
   }
 }
